Alteração do script
- Alteração do script para processar o ficheiro enviado